--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -13,8 +13,11 @@ python-memcached==1.47
 fabric==1.2.2
 psycopg2==2.4.2
 BeautifulSoup==3.2.0
+django-imagekit==0.4.0
 
 # editable checkouts
+-e git+git://github.com/boto/boto.git@2.0#egg=boto
+-e hg+https://hg@bitbucket.org/david/django-storages/#egg=django-storages
 -e git+git://github.com/robhudson/django-debug-toolbar.git#egg=django-debug-toolbar
 -e git+git://github.com/dziegler/django-css.git#egg=django-css
 -e git+git://github.com/django-extensions/django-extensions.git#egg=django-extensions
