--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -7,13 +7,14 @@ flickrapi==1.4.2
 python-twitter==0.8.2
 feedparser==5.0.1
 django-markup==0.4
-django-tagging==0.3.1
 django-grappelli
 gunicorn==0.13.4
 python-memcached==1.47
 fabric==1.2.2
 psycopg2==2.4.2
 BeautifulSoup==3.2.0
+django-taggit==0.9.3
+django-taggit-autocomplete-modified==0.1.0b4
 
 # editable checkouts
 -e git+git://github.com/boto/boto.git@2.0#egg=boto
